@@ -4,6 +4,7 @@
 
 * deprecation of `ph_with_flextable()`.
 * defunct of `display()`
+* rename arg 'formater' to 'formatter' of `as_chunk` (#152)
 
 # flextable 0.5.8
 
